# twitr

./: README.md
database-bridge/: .env  .env-docker-desktop.env  Dockerfile  package.json  tsconfig.json
database-bridge/prisma/: schema.prisma
database-bridge/prisma/migrations/20210524053840_dev_1/: migration.sql
database-bridge/prisma/migrations/20210524073046_dev_1/: migration.sql
database-bridge/prisma/migrations/20210524074405_dev_1/: migration.sql
database-bridge/prisma/migrations/20210525062643_dev/: migration.sql
database-bridge/prisma/migrations/20210529044652_retweet/: migration.sql
database-bridge/prisma/migrations/20210529045841_retweet/: migration.sql
database-bridge/src/: alias.ts  index.ts
database-bridge/src/modules/: index.ts
frontend/: .babelrc  next.config.js  package.json  tsconfig.json
frontend/src/@typings/: index.ts  post.ts  profile.ts
frontend/src/layouts/: index.ts
frontend/src/pages/: _app.tsx
frontend/src/styles/: init.sass
k8s/: config.yaml  database-bridge.yaml  dockerize.sh  down.sh  ingress.yaml  up.sh
master/: .env  Cargo.toml  Dockerfile
master/src/: main.rs
master/src/models/: bridge.rs
master/src/modules/: mod.rs
master/src/modules/credentials/: controllers.rs  debug.rs  mod.rs  models.rs  services.rs
master/src/modules/post/: controllers.rs  mod.rs  models.rs  services.rs
master/src/modules/profile/: controllers.rs  models.rs  services.rs
master/src/modules/status/: controllers.rs
master/src/services/: authority.rs  constants.rs  mod.rs  request.rs  response.rs
(+50 files in other folders)
