[package]
name = "master"
version = "0.1.0"
authors = ["SaltyAom <aomkirby123@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 's'
lto = true
# panic = 'abort'
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.3"

redis = { version = "0.20.1", features = ["tokio-comp"] }

reqwest = { version = "0.11.3", features = ["json"] }

serde = "1.0.126"
serde_json = "1.0.64"
